[ux-007] fixed spacing on loader

--- a/src/components/loader/loader.css
+++ b/src/components/loader/loader.css
@@ -5,7 +5,6 @@
   border-radius: 50%;
   background: linear-gradient(#f07e6e, #84cdfa, #5ad1cd);
   animation: animate 1.2s linear infinite;
-  margin-top: 1rem;
   margin: 0 auto;
 }
 
@@ -56,7 +55,6 @@
 
 @media (min-width: 768px) {
   .loader {
-    margin-top: 1.25rem;
     width: 225px;
     height: 175px;
   }
@@ -64,7 +62,6 @@
 
 @media (min-width: 1080px) {
   .loader {
-    margin-top: 3rem;
     width: 300px;
     height: 250px;
   }
@@ -72,7 +69,6 @@
 
 @media (min-width: 1200px) {
   .loader {
-    margin-top: 3.125rem;
     width: 350px;
     height: 300px;   
   }
